# nyt-connections-solver

./: .gitignore  CLAUDE.md  README.md
backend/: embeddings.py  main.py  nyt_client.py  pyproject.toml  solve_cli.py  solver.py  verify_embeddings.py
backend/tests/: conftest.py  test_embeddings.py  test_solver.py
